<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/splahscreen_backgroud"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    tools:context=".activity.PaymentResultActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_white_coners_25">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:orientation="vertical">

                <TextView
                    fontPath="@string/font_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:gravity="center"
                    android:text="@string/payment_success"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp"
                    tools:ignore="MissingPrefix" />


                <TextView
                    android:id="@+id/tvExit"
                    fontPath="@string/font_semibold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_56sdp"
                    android:background="@drawable/bg_black_coners_10"
                    android:gravity="center"
                    android:padding="@dimen/_15sdp"
                    android:text="@string/exit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    tools:ignore="MissingPrefix" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


</RelativeLayout>