<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/_10sdp"
    android:paddingRight="@dimen/_10sdp"
    android:paddingLeft="@dimen/_10sdp"
    android:background="@color/white"
    tools:context=".activity.MyOrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/lyOrderBY"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:padding="@dimen/_3sdp"
            android:layout_marginLeft="-5dp"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/left_arrow"/>

        <TextView
            fontPath="@string/font_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/my_orders"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            tools:ignore="MissingPrefix" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcMyOrderList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyOrderBY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="@dimen/_10sdp"
        android:background="@color/white"
        android:paddingBottom="@dimen/_10sdp">

        <TextView
            fontPath="@string/font_semibold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_black_coners_10"
            android:gravity="center"
            android:padding="@dimen/_15sdp"
            android:text="@string/see_bill"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            tools:ignore="MissingPrefix" />

    </LinearLayout>


</RelativeLayout>