<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:background="#F1F0F0"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:background="@drawable/bg_white_round_corner_alert_10"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_5sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp">
            <TextView
                fontPath="@string/font_mark_web_thin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/_7sdp">
            <TextView
                android:id="@+id/tvDesc"
                fontPath="@string/font_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:gravity="center"
                android:text="@string/no_internet"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_3sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                style="@style/CardView_orange_rect"
                android:layout_width="@dimen/_45sdp"
                android:layout_gravity="center"
                app:cardElevation="0dp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp">

                <TextView
                    android:id="@+id/tvOk"
                    fontPath="@string/font_regular"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:text="Ok"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>