<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/_10sdp">

    <ImageView
        android:id="@+id/ivFood_img"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/food_1"/>



    <RelativeLayout
        android:id="@+id/lyDetails"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:orientation="vertical"
        android:layout_toEndOf="@id/ivFood_img">

        <TextView
            android:id="@+id/tvFoodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fontPath="@string/font_semibold"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="Egg Salad"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/tvFoodPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fontPath="@string/font_bold"
            android:text="£15"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/_5sdp"
            android:textColor="#1BAA00"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_10sdp"
            tools:ignore="MissingPrefix" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvFoodPrice"
            android:layout_marginTop="@dimen/_5sdp">

            <ImageView
                android:id="@+id/ivSub"
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:layout_gravity="center"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/clock"/>

            <TextView
                android:id="@+id/tvFoodCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fontPath="@string/font_regular"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="25"
                android:textSize="@dimen/_12ssp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/tvPreparingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fontPath="@string/font_regular"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="Minutes"
                android:textSize="@dimen/_12ssp"
                tools:ignore="MissingPrefix" />


        </LinearLayout>


   <TextView
       android:id="@+id/tvStatus"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       fontPath="@string/font_medium"
       android:text="Order Complete"
       android:layout_above="@id/pbPrepareTime"
       android:layout_alignParentEnd="true"
       android:textSize="@dimen/_10ssp"
       android:textColor="#007BCE"
       tools:ignore="MissingPrefix" />


        <ProgressBar
            android:id="@+id/pbPrepareTime"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_5sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_3sdp"
            android:indeterminateDrawable="@drawable/bg_progress_bar"
            android:max="10000"
            android:progress="10000"
            android:progressDrawable="@drawable/bg_progress_bar" />



    </RelativeLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/lyDetails"
        android:background="#DEDEDE"
        android:layout_marginTop="@dimen/_10sdp"/>




</RelativeLayout>